[package]
name = "hashslab"
version = "0.5.2"
edition = "2021"
documentation = "https://docs.rs/hashslab/"
repository = "https://github.com/pepyaka/hashslab"
license = "Apache-2.0 OR MIT"
description = "A hash table with data accessible by index."
keywords = ["hash", "slab", "no_std"]
categories = ["data-structures", "no-std"]

[[bench]]
name = "allocate"
harness = false

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "lookup"
harness = false

[[bench]]
name = "iter"
harness = false

[[bench]]
name = "remove"
harness = false

[[bench]]
name = "entry"
harness = false

[[bench]]
name = "iai"
harness = false
bench = false

[dependencies]
slab = { version = "0.4.9", default-features = false }
hashbrown = { version = "0.15.2", default-features = false }
thiserror = { version = "2.0.4", default-features = false }

[dev-dependencies]
itertools = "0.13"
rand = { version = "0.8", features = ["small_rng"] }
quickcheck = { version = "1.0", default-features = false }
fnv = "1.0"
lazy_static = "1.3"
fxhash = "0.2.1"
serde_derive = "1.0"
indexmap = "2.6.0"
criterion = { version = "0.5" }
iai-callgrind = "0.14"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = "1.0.217"

[features]
default = ["std"]
std = []

[[example]]
name = "rest_api"
doc-scrape-examples = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
